fix preview image not responsive

--- a/InputfieldImageReference.css
+++ b/InputfieldImageReference.css
@@ -18,7 +18,6 @@
 .InputfieldImageReference .uk-panel {
     border: 1px solid #d9e1ea;
     padding: 25px;
-    min-width: 100px;
     display: inline-block;
     position: relative;
     margin-right: 1rem;
@@ -36,6 +35,7 @@
     padding: 10px;
     font-size: 0.75rem;
     margin-top: 1rem;
+    max-width: 100%;
     word-wrap: break-word;
 }
 
